// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Codebox component (multiple langs) switch between languages 1`] = `
<div>
  <pre
    class="pre language-js|language-mjs"
  >
    <div
      class="header"
    >
      <div
        class="langBox"
      >
        <button
          class="lang selected"
          type="button"
        >
          cjs
        </button>
        <button
          class="lang"
          type="button"
        >
          mjs
        </button>
      </div>
      <button
        aria-label="components.codeBox.copy"
        class="copy"
        data-testid="copy"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <span
        class="token keyword"
      >
        const
      </span>
       http 
      <span
        class="token operator"
      >
        =
      </span>
       
      <span
        class="token function"
      >
        require
      </span>
      <span
        class="token punctuation"
      >
        (
      </span>
      <span
        class="token string"
      >
        'http'
      </span>
      <span
        class="token punctuation"
      >
        )
      </span>
      <span
        class="token punctuation"
      >
        ;
      </span>
      

    </div>
  </pre>
</div>
`;

exports[`Codebox component (multiple langs) switch between languages 2`] = `
<div>
  <pre
    class="pre language-js|language-mjs"
  >
    <div
      class="header"
    >
      <div
        class="langBox"
      >
        <button
          class="lang"
          type="button"
        >
          cjs
        </button>
        <button
          class="lang selected"
          type="button"
        >
          mjs
        </button>
      </div>
      <button
        aria-label="components.codeBox.copy"
        class="copy"
        data-testid="copy"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
          />
        </svg>
      </button>
    </div>
    <div
      class="content"
    >
      <span
        class="token keyword"
      >
        import
      </span>
       http 
      <span
        class="token keyword"
      >
        from
      </span>
       
      <span
        class="token string"
      >
        'http'
      </span>
      <span
        class="token punctuation"
      >
        ;
      </span>
    </div>
  </pre>
</div>
`;
